parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    RETURN

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM ID saw_id saw_program SEMICOLON bloque
Rule 2     programa -> PROGRAM ID saw_id saw_program SEMICOLON dec bloque
Rule 3     funcion -> FUNCTION func1 ID saw_id saw_function OPAREN param CPAREN bloque
Rule 4     func1 -> simple
Rule 5     func1 -> VOID saw_type
Rule 6     param -> param2 param1
Rule 7     param -> empty
Rule 8     param1 -> COMMA param2 param1
Rule 9     param1 -> empty
Rule 10    param2 -> simple ID saw_id_param
Rule 11    param2 -> multiple ID saw_id_param variable1 variable1
Rule 12    clase -> CLASS ID saw_id saw_class COLON clase_bloque SEMICOLON
Rule 13    clase_bloque -> OCURLY ATTRIBUTES COLON clase_bloque1 METHODS COLON clase_metodos_bloque class_scope_end CCURLY
Rule 14    clase_bloque1 -> dec
Rule 15    clase_bloque1 -> empty
Rule 16    clase_metodos_bloque -> funcion clase_metodos_bloque
Rule 17    clase_metodos_bloque -> empty
Rule 18    ciclo_while -> WHILE cond2 THEN bloque SEMICOLON
Rule 19    ciclo_for -> FOR OPAREN variable FROM ciclo_for1 TO ciclo_for1 BY ciclo_for1 CPAREN THEN bloque SEMICOLON
Rule 20    ciclo_for1 -> CSTINT
Rule 21    ciclo_for1 -> variable
Rule 22    dec -> VAR tipo SEMICOLON dec1
Rule 23    dec1 -> dec
Rule 24    dec1 -> empty
Rule 25    tipo -> compuesto ID saw_id saw_variable tipo1
Rule 26    tipo -> simple ID saw_id saw_variable tipo1
Rule 27    tipo -> multiple ID saw_id saw_variable OBRACKET CSTINT CBRACKET tipo3 tipo2
Rule 28    tipo1 -> COMMA ID saw_id saw_variable tipo1
Rule 29    tipo1 -> empty
Rule 30    tipo2 -> COMMA ID saw_id OBRACKET CSTINT CBRACKET tipo3
Rule 31    tipo2 -> empty
Rule 32    tipo3 -> OBRACKET CSTINT CBRACKET
Rule 33    tipo3 -> empty
Rule 34    simple -> INT saw_type
Rule 35    simple -> FLOAT saw_type
Rule 36    simple -> BOOL saw_type
Rule 37    simple -> STRING saw_type
Rule 38    simple -> CHAR saw_type
Rule 39    multiple -> INTS saw_type
Rule 40    multiple -> FLOATS saw_type
Rule 41    multiple -> BOOLS saw_type
Rule 42    multiple -> STRINGS saw_type
Rule 43    multiple -> CHARS saw_type
Rule 44    compuesto -> ID saw_type
Rule 45    compuesto -> DATAFRAME saw_type
Rule 46    compuesto -> FILE saw_type
Rule 47    bloque -> OCURLY b1 CCURLY scope_end
Rule 48    b1 -> estatuto b1
Rule 49    b1 -> empty
Rule 50    estatuto -> asignacion
Rule 51    estatuto -> llamada
Rule 52    estatuto -> condicion
Rule 53    estatuto -> escritura
Rule 54    estatuto -> leer
Rule 55    estatuto -> ciclo_while
Rule 56    estatuto -> ciclo_for
Rule 57    estatuto -> ternaria
Rule 58    estatuto -> bloque
Rule 59    estatuto -> funcion
Rule 60    estatuto -> clase
Rule 61    estatuto -> dec
Rule 62    estatuto_redux -> asignacion
Rule 63    estatuto_redux -> llamada
Rule 64    estatuto_redux -> escritura
Rule 65    estatuto_redux -> leer
Rule 66    estatuto_redux -> ternaria
Rule 67    asignacion -> variable AS exp saw_asig
Rule 68    condicion -> IF cond2 THEN bloque cond1 SEMICOLON
Rule 69    cond1 -> ELSE bloque
Rule 70    cond1 -> ELSE IF cond2 THEN bloque cond1
Rule 71    cond1 -> empty
Rule 72    cond2 -> OPAREN exp CPAREN
Rule 73    ternaria -> exp QUESTION estatuto_redux COLON estatuto_redux SEMICOLON
Rule 74    escritura -> PRINT OPAREN exp e1 CPAREN
Rule 75    e1 -> COMMA exp e1
Rule 76    e1 -> empty
Rule 77    leer -> READ OPAREN exp e1 CPAREN
Rule 78    boolean -> TRUE
Rule 79    boolean -> FALSE
Rule 80    variable -> ID saw_id variable1 variable1 variable2
Rule 81    variable1 -> OBRACKET exp CBRACKET
Rule 82    variable1 -> empty
Rule 83    variable2 -> PERIOD ID saw_id variable1 variable1 variable2
Rule 84    variable2 -> empty
Rule 85    llamada -> ID saw_id OPAREN exp llamada1 CPAREN
Rule 86    llamada -> ID saw_id OPAREN CPAREN
Rule 87    llamada1 -> COMMA exp llamada1
Rule 88    llamada1 -> empty
Rule 89    exp -> texp exp1 end_of_expression
Rule 90    exp1 -> OR texp exp1
Rule 91    exp1 -> empty
Rule 92    texp -> gexp texp1
Rule 93    texp1 -> AND gexp texp1
Rule 94    texp1 -> empty
Rule 95    gexp -> mexp gexp1
Rule 96    gexp1 -> LT mexp
Rule 97    gexp1 -> GT mexp
Rule 98    gexp1 -> GTE mexp
Rule 99    gexp1 -> LTE mexp
Rule 100   gexp1 -> EQ mexp
Rule 101   gexp1 -> NE mexp
Rule 102   gexp1 -> empty
Rule 103   mexp -> termino mexp1
Rule 104   mexp1 -> PLUS saw_plusminus_operator termino mexp1
Rule 105   mexp1 -> MINUS saw_plusminus_operator termino mexp1
Rule 106   mexp1 -> empty
Rule 107   termino -> factor term1 check_plusminus_operator
Rule 108   term1 -> MULT saw_multdiv_operator factor term1
Rule 109   term1 -> DIV saw_multdiv_operator factor term1
Rule 110   term1 -> empty
Rule 111   factor -> OPAREN exp CPAREN check_multdiv_operator
Rule 112   factor -> varcst check_multdiv_operator
Rule 113   factor -> variable
Rule 114   factor -> llamada
Rule 115   varcst -> CSTINT saw_end_value_int
Rule 116   varcst -> CSTFLT saw_end_value_flt
Rule 117   varcst -> CSTCHAR
Rule 118   varcst -> CSTSTRING
Rule 119   varcst -> boolean
Rule 120   empty -> <empty>
Rule 121   saw_program -> <empty>
Rule 122   saw_class -> <empty>
Rule 123   saw_type -> <empty>
Rule 124   saw_id -> <empty>
Rule 125   saw_id_param -> <empty>
Rule 126   saw_variable -> <empty>
Rule 127   saw_asig -> <empty>
Rule 128   saw_end_value_int -> <empty>
Rule 129   saw_end_value_flt -> <empty>
Rule 130   saw_plusminus_operator -> <empty>
Rule 131   check_plusminus_operator -> <empty>
Rule 132   saw_multdiv_operator -> <empty>
Rule 133   check_multdiv_operator -> <empty>
Rule 134   end_of_expression -> <empty>
Rule 135   do_not_save -> <empty>
Rule 136   saw_function -> <empty>
Rule 137   scope_start -> <empty>
Rule 138   scope_end -> <empty>
Rule 139   class_scope_start -> <empty>
Rule 140   class_scope_end -> <empty>

Terminals, with rules where they appear

AND                  : 93
AS                   : 67
ATTRIBUTES           : 13
BOOL                 : 36
BOOLS                : 41
BY                   : 19
CBRACKET             : 27 30 32 81
CCURLY               : 13 47
CHAR                 : 38
CHARS                : 43
CLASS                : 12
COLON                : 12 13 13 73
COMMA                : 8 28 30 75 87
COMMENT              : 
CPAREN               : 3 19 72 74 77 85 86 111
CSTCHAR              : 117
CSTFLT               : 116
CSTINT               : 20 27 30 32 115
CSTSTRING            : 118
DATAFRAME            : 45
DIV                  : 109
ELSE                 : 69 70
EQ                   : 100
FALSE                : 79
FILE                 : 46
FLOAT                : 35
FLOATS               : 40
FOR                  : 19
FROM                 : 19
FUNCTION             : 3
GT                   : 97
GTE                  : 98
ID                   : 1 2 3 10 11 12 25 26 27 28 30 44 80 83 85 86
IF                   : 68 70
INT                  : 34
INTS                 : 39
LT                   : 96
LTE                  : 99
METHODS              : 13
MINUS                : 105
MULT                 : 108
NE                   : 101
OBRACKET             : 27 30 32 81
OCURLY               : 13 47
OPAREN               : 3 19 72 74 77 85 86 111
OR                   : 90
PERIOD               : 83
PLUS                 : 104
PRINT                : 74
PROGRAM              : 1 2
QUESTION             : 73
READ                 : 77
RETURN               : 
SEMICOLON            : 1 2 12 18 19 22 68 73
STRING               : 37
STRINGS              : 42
THEN                 : 18 19 68 70
TO                   : 19
TRUE                 : 78
VAR                  : 22
VOID                 : 5
WHILE                : 18
error                : 

Nonterminals, with rules where they appear

asignacion           : 50 62
b1                   : 47 48
bloque               : 1 2 3 18 19 58 68 69 70
boolean              : 119
check_multdiv_operator : 111 112
check_plusminus_operator : 107
ciclo_for            : 56
ciclo_for1           : 19 19 19
ciclo_while          : 55
clase                : 60
clase_bloque         : 12
clase_bloque1        : 13
clase_metodos_bloque : 13 16
class_scope_end      : 13
class_scope_start    : 
compuesto            : 25
cond1                : 68 70
cond2                : 18 68 70
condicion            : 52
dec                  : 2 14 23 61
dec1                 : 22
do_not_save          : 
e1                   : 74 75 77
empty                : 7 9 15 17 24 29 31 33 49 71 76 82 84 88 91 94 102 106 110
end_of_expression    : 89
escritura            : 53 64
estatuto             : 48
estatuto_redux       : 73 73
exp                  : 67 72 73 74 75 77 81 85 87 111
exp1                 : 89 90
factor               : 107 108 109
func1                : 3
funcion              : 16 59
gexp                 : 92 93
gexp1                : 95
leer                 : 54 65
llamada              : 51 63 114
llamada1             : 85 87
mexp                 : 95 96 97 98 99 100 101
mexp1                : 103 104 105
multiple             : 11 27
param                : 3
param1               : 6 8
param2               : 6 8
programa             : 0
saw_asig             : 67
saw_class            : 12
saw_end_value_flt    : 116
saw_end_value_int    : 115
saw_function         : 3
saw_id               : 1 2 3 12 25 26 27 28 30 80 83 85 86
saw_id_param         : 10 11
saw_multdiv_operator : 108 109
saw_plusminus_operator : 104 105
saw_program          : 1 2
saw_type             : 5 34 35 36 37 38 39 40 41 42 43 44 45 46
saw_variable         : 25 26 27 28
scope_end            : 47
scope_start          : 
simple               : 4 10 26
term1                : 107 108 109
termino              : 103 104 105
ternaria             : 57 66
texp                 : 89 90
texp1                : 92 93
tipo                 : 22
tipo1                : 25 26 28
tipo2                : 27
tipo3                : 27 30
varcst               : 112
variable             : 19 21 67 113
variable1            : 11 11 80 80 83 83
variable2            : 80 83

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM ID saw_id saw_program SEMICOLON bloque
    (2) programa -> . PROGRAM ID saw_id saw_program SEMICOLON dec bloque

    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAM . ID saw_id saw_program SEMICOLON bloque
    (2) programa -> PROGRAM . ID saw_id saw_program SEMICOLON dec bloque

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAM ID . saw_id saw_program SEMICOLON bloque
    (2) programa -> PROGRAM ID . saw_id saw_program SEMICOLON dec bloque
    (124) saw_id -> .

    SEMICOLON       reduce using rule 124 (saw_id -> .)

    saw_id                         shift and go to state 4

state 4

    (1) programa -> PROGRAM ID saw_id . saw_program SEMICOLON bloque
    (2) programa -> PROGRAM ID saw_id . saw_program SEMICOLON dec bloque
    (121) saw_program -> .

    SEMICOLON       reduce using rule 121 (saw_program -> .)

    saw_program                    shift and go to state 5

state 5

    (1) programa -> PROGRAM ID saw_id saw_program . SEMICOLON bloque
    (2) programa -> PROGRAM ID saw_id saw_program . SEMICOLON dec bloque

    SEMICOLON       shift and go to state 6


state 6

    (1) programa -> PROGRAM ID saw_id saw_program SEMICOLON . bloque
    (2) programa -> PROGRAM ID saw_id saw_program SEMICOLON . dec bloque
    (47) bloque -> . OCURLY b1 CCURLY scope_end
    (22) dec -> . VAR tipo SEMICOLON dec1

    OCURLY          shift and go to state 9
    VAR             shift and go to state 10

    bloque                         shift and go to state 7
    dec                            shift and go to state 8

state 7

    (1) programa -> PROGRAM ID saw_id saw_program SEMICOLON bloque .

    $end            reduce using rule 1 (programa -> PROGRAM ID saw_id saw_program SEMICOLON bloque .)


state 8

    (2) programa -> PROGRAM ID saw_id saw_program SEMICOLON dec . bloque
    (47) bloque -> . OCURLY b1 CCURLY scope_end

    OCURLY          shift and go to state 9

    bloque                         shift and go to state 11

state 9

    (47) bloque -> OCURLY . b1 CCURLY scope_end
    (48) b1 -> . estatuto b1
    (49) b1 -> . empty
    (50) estatuto -> . asignacion
    (51) estatuto -> . llamada
    (52) estatuto -> . condicion
    (53) estatuto -> . escritura
    (54) estatuto -> . leer
    (55) estatuto -> . ciclo_while
    (56) estatuto -> . ciclo_for
    (57) estatuto -> . ternaria
    (58) estatuto -> . bloque
    (59) estatuto -> . funcion
    (60) estatuto -> . clase
    (61) estatuto -> . dec
    (120) empty -> .
    (67) asignacion -> . variable AS exp saw_asig
    (85) llamada -> . ID saw_id OPAREN exp llamada1 CPAREN
    (86) llamada -> . ID saw_id OPAREN CPAREN
    (68) condicion -> . IF cond2 THEN bloque cond1 SEMICOLON
    (74) escritura -> . PRINT OPAREN exp e1 CPAREN
    (77) leer -> . READ OPAREN exp e1 CPAREN
    (18) ciclo_while -> . WHILE cond2 THEN bloque SEMICOLON
    (19) ciclo_for -> . FOR OPAREN variable FROM ciclo_for1 TO ciclo_for1 BY ciclo_for1 CPAREN THEN bloque SEMICOLON
    (73) ternaria -> . exp QUESTION estatuto_redux COLON estatuto_redux SEMICOLON
    (47) bloque -> . OCURLY b1 CCURLY scope_end
    (3) funcion -> . FUNCTION func1 ID saw_id saw_function OPAREN param CPAREN bloque
    (12) clase -> . CLASS ID saw_id saw_class COLON clase_bloque SEMICOLON
    (22) dec -> . VAR tipo SEMICOLON dec1
    (80) variable -> . ID saw_id variable1 variable1 variable2
    (89) exp -> . texp exp1 end_of_expression
    (92) texp -> . gexp texp1
    (95) gexp -> . mexp gexp1
    (103) mexp -> . termino mexp1
    (107) termino -> . factor term1 check_plusminus_operator
    (111) factor -> . OPAREN exp CPAREN check_multdiv_operator
    (112) factor -> . varcst check_multdiv_operator
    (113) factor -> . variable
    (114) factor -> . llamada
    (115) varcst -> . CSTINT saw_end_value_int
    (116) varcst -> . CSTFLT saw_end_value_flt
    (117) varcst -> . CSTCHAR
    (118) varcst -> . CSTSTRING
    (119) varcst -> . boolean
    (78) boolean -> . TRUE
    (79) boolean -> . FALSE

    CCURLY          reduce using rule 120 (empty -> .)
    ID              shift and go to state 29
    IF              shift and go to state 31
    PRINT           shift and go to state 32
    READ            shift and go to state 33
    WHILE           shift and go to state 34
    FOR             shift and go to state 35
    OCURLY          shift and go to state 9
    FUNCTION        shift and go to state 36
    CLASS           shift and go to state 37
    VAR             shift and go to state 10
    OPAREN          shift and go to state 30
    CSTINT          shift and go to state 44
    CSTFLT          shift and go to state 45
    CSTCHAR         shift and go to state 46
    CSTSTRING       shift and go to state 47
    TRUE            shift and go to state 49
    FALSE           shift and go to state 50

    b1                             shift and go to state 12
    estatuto                       shift and go to state 13
    empty                          shift and go to state 14
    asignacion                     shift and go to state 15
    llamada                        shift and go to state 16
    condicion                      shift and go to state 17
    escritura                      shift and go to state 18
    leer                           shift and go to state 19
    ciclo_while                    shift and go to state 20
    ciclo_for                      shift and go to state 21
    ternaria                       shift and go to state 22
    bloque                         shift and go to state 23
    funcion                        shift and go to state 24
    clase                          shift and go to state 25
    dec                            shift and go to state 26
    variable                       shift and go to state 27
    exp                            shift and go to state 28
    texp                           shift and go to state 38
    gexp                           shift and go to state 39
    mexp                           shift and go to state 40
    termino                        shift and go to state 41
    factor                         shift and go to state 42
    varcst                         shift and go to state 43
    boolean                        shift and go to state 48

state 10

    (22) dec -> VAR . tipo SEMICOLON dec1
    (25) tipo -> . compuesto ID saw_id saw_variable tipo1
    (26) tipo -> . simple ID saw_id saw_variable tipo1
    (27) tipo -> . multiple ID saw_id saw_variable OBRACKET CSTINT CBRACKET tipo3 tipo2
    (44) compuesto -> . ID saw_type
    (45) compuesto -> . DATAFRAME saw_type
    (46) compuesto -> . FILE saw_type
    (34) simple -> . INT saw_type
    (35) simple -> . FLOAT saw_type
    (36) simple -> . BOOL saw_type
    (37) simple -> . STRING saw_type
    (38) simple -> . CHAR saw_type
    (39) multiple -> . INTS saw_type
    (40) multiple -> . FLOATS saw_type
    (41) multiple -> . BOOLS saw_type
    (42) multiple -> . STRINGS saw_type
    (43) multiple -> . CHARS saw_type

    ID              shift and go to state 53
    DATAFRAME       shift and go to state 56
    FILE            shift and go to state 57
    INT             shift and go to state 58
    FLOAT           shift and go to state 59
    BOOL            shift and go to state 60
    STRING          shift and go to state 61
    CHAR            shift and go to state 62
    INTS            shift and go to state 63
    FLOATS          shift and go to state 64
    BOOLS           shift and go to state 65
    STRINGS         shift and go to state 66
    CHARS           shift and go to state 67

    tipo                           shift and go to state 51
    compuesto                      shift and go to state 52
    simple                         shift and go to state 54
    multiple                       shift and go to state 55

state 11

    (2) programa -> PROGRAM ID saw_id saw_program SEMICOLON dec bloque .

    $end            reduce using rule 2 (programa -> PROGRAM ID saw_id saw_program SEMICOLON dec bloque .)


state 12

    (47) bloque -> OCURLY b1 . CCURLY scope_end

    CCURLY          shift and go to state 68


state 13

    (48) b1 -> estatuto . b1
    (48) b1 -> . estatuto b1
    (49) b1 -> . empty
    (50) estatuto -> . asignacion
    (51) estatuto -> . llamada
    (52) estatuto -> . condicion
    (53) estatuto -> . escritura
    (54) estatuto -> . leer
    (55) estatuto -> . ciclo_while
    (56) estatuto -> . ciclo_for
    (57) estatuto -> . ternaria
    (58) estatuto -> . bloque
    (59) estatuto -> . funcion
    (60) estatuto -> . clase
    (61) estatuto -> . dec
    (120) empty -> .
    (67) asignacion -> . variable AS exp saw_asig
    (85) llamada -> . ID saw_id OPAREN exp llamada1 CPAREN
    (86) llamada -> . ID saw_id OPAREN CPAREN
    (68) condicion -> . IF cond2 THEN bloque cond1 SEMICOLON
    (74) escritura -> . PRINT OPAREN exp e1 CPAREN
    (77) leer -> . READ OPAREN exp e1 CPAREN
    (18) ciclo_while -> . WHILE cond2 THEN bloque SEMICOLON
    (19) ciclo_for -> . FOR OPAREN variable FROM ciclo_for1 TO ciclo_for1 BY ciclo_for1 CPAREN THEN bloque SEMICOLON
    (73) ternaria -> . exp QUESTION estatuto_redux COLON estatuto_redux SEMICOLON
    (47) bloque -> . OCURLY b1 CCURLY scope_end
    (3) funcion -> . FUNCTION func1 ID saw_id saw_function OPAREN param CPAREN bloque
    (12) clase -> . CLASS ID saw_id saw_class COLON clase_bloque SEMICOLON
    (22) dec -> . VAR tipo SEMICOLON dec1
    (80) variable -> . ID saw_id variable1 variable1 variable2
    (89) exp -> . texp exp1 end_of_expression
    (92) texp -> . gexp texp1
    (95) gexp -> . mexp gexp1
    (103) mexp -> . termino mexp1
    (107) termino -> . factor term1 check_plusminus_operator
    (111) factor -> . OPAREN exp CPAREN check_multdiv_operator
    (112) factor -> . varcst check_multdiv_operator
    (113) factor -> . variable
    (114) factor -> . llamada
    (115) varcst -> . CSTINT saw_end_value_int
    (116) varcst -> . CSTFLT saw_end_value_flt
    (117) varcst -> . CSTCHAR
    (118) varcst -> . CSTSTRING
    (119) varcst -> . boolean
    (78) boolean -> . TRUE
    (79) boolean -> . FALSE

    CCURLY          reduce using rule 120 (empty -> .)
    ID              shift and go to state 29
    IF              shift and go to state 31
    PRINT           shift and go to state 32
    READ            shift and go to state 33
    WHILE           shift and go to state 34
    FOR             shift and go to state 35
    OCURLY          shift and go to state 9
    FUNCTION        shift and go to state 36
    CLASS           shift and go to state 37
    VAR             shift and go to state 10
    OPAREN          shift and go to state 30
    CSTINT          shift and go to state 44
    CSTFLT          shift and go to state 45
    CSTCHAR         shift and go to state 46
    CSTSTRING       shift and go to state 47
    TRUE            shift and go to state 49
    FALSE           shift and go to state 50

    estatuto                       shift and go to state 13
    b1                             shift and go to state 69
    empty                          shift and go to state 14
    asignacion                     shift and go to state 15
    llamada                        shift and go to state 16
    condicion                      shift and go to state 17
    escritura                      shift and go to state 18
    leer                           shift and go to state 19
    ciclo_while                    shift and go to state 20
    ciclo_for                      shift and go to state 21
    ternaria                       shift and go to state 22
    bloque                         shift and go to state 23
    funcion                        shift and go to state 24
    clase                          shift and go to state 25
    dec                            shift and go to state 26
    variable                       shift and go to state 27
    exp                            shift and go to state 28
    texp                           shift and go to state 38
    gexp                           shift and go to state 39
    mexp                           shift and go to state 40
    termino                        shift and go to state 41
    factor                         shift and go to state 42
    varcst                         shift and go to state 43
    boolean                        shift and go to state 48

state 14

    (49) b1 -> empty .

    CCURLY          reduce using rule 49 (b1 -> empty .)


state 15

    (50) estatuto -> asignacion .

    ID              reduce using rule 50 (estatuto -> asignacion .)
    IF              reduce using rule 50 (estatuto -> asignacion .)
    PRINT           reduce using rule 50 (estatuto -> asignacion .)
    READ            reduce using rule 50 (estatuto -> asignacion .)
    WHILE           reduce using rule 50 (estatuto -> asignacion .)
    FOR             reduce using rule 50 (estatuto -> asignacion .)
    OCURLY          reduce using rule 50 (estatuto -> asignacion .)
    FUNCTION        reduce using rule 50 (estatuto -> asignacion .)
    CLASS           reduce using rule 50 (estatuto -> asignacion .)
    VAR             reduce using rule 50 (estatuto -> asignacion .)
    OPAREN          reduce using rule 50 (estatuto -> asignacion .)
    CSTINT          reduce using rule 50 (estatuto -> asignacion .)
    CSTFLT          reduce using rule 50 (estatuto -> asignacion .)
    CSTCHAR         reduce using rule 50 (estatuto -> asignacion .)
    CSTSTRING       reduce using rule 50 (estatuto -> asignacion .)
    TRUE            reduce using rule 50 (estatuto -> asignacion .)
    FALSE           reduce using rule 50 (estatuto -> asignacion .)
    CCURLY          reduce using rule 50 (estatuto -> asignacion .)


state 16

    (51) estatuto -> llamada .
    (114) factor -> llamada .

    ID              reduce using rule 51 (estatuto -> llamada .)
    IF              reduce using rule 51 (estatuto -> llamada .)
    PRINT           reduce using rule 51 (estatuto -> llamada .)
    READ            reduce using rule 51 (estatuto -> llamada .)
    WHILE           reduce using rule 51 (estatuto -> llamada .)
    FOR             reduce using rule 51 (estatuto -> llamada .)
    OCURLY          reduce using rule 51 (estatuto -> llamada .)
    FUNCTION        reduce using rule 51 (estatuto -> llamada .)
    CLASS           reduce using rule 51 (estatuto -> llamada .)
    VAR             reduce using rule 51 (estatuto -> llamada .)
    OPAREN          reduce using rule 51 (estatuto -> llamada .)
    CSTINT          reduce using rule 51 (estatuto -> llamada .)
    CSTFLT          reduce using rule 51 (estatuto -> llamada .)
    CSTCHAR         reduce using rule 51 (estatuto -> llamada .)
    CSTSTRING       reduce using rule 51 (estatuto -> llamada .)
    TRUE            reduce using rule 51 (estatuto -> llamada .)
    FALSE           reduce using rule 51 (estatuto -> llamada .)
    CCURLY          reduce using rule 51 (estatuto -> llamada .)
    MULT            reduce using rule 114 (factor -> llamada .)
    DIV             reduce using rule 114 (factor -> llamada .)
    PLUS            reduce using rule 114 (factor -> llamada .)
    MINUS           reduce using rule 114 (factor -> llamada .)
    LT              reduce using rule 114 (factor -> llamada .)
    GT              reduce using rule 114 (factor -> llamada .)
    GTE             reduce using rule 114 (factor -> llamada .)
    LTE             reduce using rule 114 (factor -> llamada .)
    EQ              reduce using rule 114 (factor -> llamada .)
    NE              reduce using rule 114 (factor -> llamada .)
    AND             reduce using rule 114 (factor -> llamada .)
    OR              reduce using rule 114 (factor -> llamada .)
    QUESTION        reduce using rule 114 (factor -> llamada .)


state 17

    (52) estatuto -> condicion .

    ID              reduce using rule 52 (estatuto -> condicion .)
    IF              reduce using rule 52 (estatuto -> condicion .)
    PRINT           reduce using rule 52 (estatuto -> condicion .)
    READ            reduce using rule 52 (estatuto -> condicion .)
    WHILE           reduce using rule 52 (estatuto -> condicion .)
    FOR             reduce using rule 52 (estatuto -> condicion .)
    OCURLY          reduce using rule 52 (estatuto -> condicion .)
    FUNCTION        reduce using rule 52 (estatuto -> condicion .)
    CLASS           reduce using rule 52 (estatuto -> condicion .)
    VAR             reduce using rule 52 (estatuto -> condicion .)
    OPAREN          reduce using rule 52 (estatuto -> condicion .)
    CSTINT          reduce using rule 52 (estatuto -> condicion .)
    CSTFLT          reduce using rule 52 (estatuto -> condicion .)
    CSTCHAR         reduce using rule 52 (estatuto -> condicion .)
    CSTSTRING       reduce using rule 52 (estatuto -> condicion .)
    TRUE            reduce using rule 52 (estatuto -> condicion .)
    FALSE           reduce using rule 52 (estatuto -> condicion .)
    CCURLY          reduce using rule 52 (estatuto -> condicion .)


state 18

    (53) estatuto -> escritura .

    ID              reduce using rule 53 (estatuto -> escritura .)
    IF              reduce using rule 53 (estatuto -> escritura .)
    PRINT           reduce using rule 53 (estatuto -> escritura .)
    READ            reduce using rule 53 (estatuto -> escritura .)
    WHILE           reduce using rule 53 (estatuto -> escritura .)
    FOR             reduce using rule 53 (estatuto -> escritura .)
    OCURLY          reduce using rule 53 (estatuto -> escritura .)
    FUNCTION        reduce using rule 53 (estatuto -> escritura .)
    CLASS           reduce using rule 53 (estatuto -> escritura .)
    VAR             reduce using rule 53 (estatuto -> escritura .)
    OPAREN          reduce using rule 53 (estatuto -> escritura .)
    CSTINT          reduce using rule 53 (estatuto -> escritura .)
    CSTFLT          reduce using rule 53 (estatuto -> escritura .)
    CSTCHAR         reduce using rule 53 (estatuto -> escritura .)
    CSTSTRING       reduce using rule 53 (estatuto -> escritura .)
    TRUE            reduce using rule 53 (estatuto -> escritura .)
    FALSE           reduce using rule 53 (estatuto -> escritura .)
    CCURLY          reduce using rule 53 (estatuto -> escritura .)


state 19

    (54) estatuto -> leer .

    ID              reduce using rule 54 (estatuto -> leer .)
    IF              reduce using rule 54 (estatuto -> leer .)
    PRINT           reduce using rule 54 (estatuto -> leer .)
    READ            reduce using rule 54 (estatuto -> leer .)
    WHILE           reduce using rule 54 (estatuto -> leer .)
    FOR             reduce using rule 54 (estatuto -> leer .)
    OCURLY          reduce using rule 54 (estatuto -> leer .)
    FUNCTION        reduce using rule 54 (estatuto -> leer .)
    CLASS           reduce using rule 54 (estatuto -> leer .)
    VAR             reduce using rule 54 (estatuto -> leer .)
    OPAREN          reduce using rule 54 (estatuto -> leer .)
    CSTINT          reduce using rule 54 (estatuto -> leer .)
    CSTFLT          reduce using rule 54 (estatuto -> leer .)
    CSTCHAR         reduce using rule 54 (estatuto -> leer .)
    CSTSTRING       reduce using rule 54 (estatuto -> leer .)
    TRUE            reduce using rule 54 (estatuto -> leer .)
    FALSE           reduce using rule 54 (estatuto -> leer .)
    CCURLY          reduce using rule 54 (estatuto -> leer .)


state 20

    (55) estatuto -> ciclo_while .

    ID              reduce using rule 55 (estatuto -> ciclo_while .)
    IF              reduce using rule 55 (estatuto -> ciclo_while .)
    PRINT           reduce using rule 55 (estatuto -> ciclo_while .)
    READ            reduce using rule 55 (estatuto -> ciclo_while .)
    WHILE           reduce using rule 55 (estatuto -> ciclo_while .)
    FOR             reduce using rule 55 (estatuto -> ciclo_while .)
    OCURLY          reduce using rule 55 (estatuto -> ciclo_while .)
    FUNCTION        reduce using rule 55 (estatuto -> ciclo_while .)
    CLASS           reduce using rule 55 (estatuto -> ciclo_while .)
    VAR             reduce using rule 55 (estatuto -> ciclo_while .)
    OPAREN          reduce using rule 55 (estatuto -> ciclo_while .)
    CSTINT          reduce using rule 55 (estatuto -> ciclo_while .)
    CSTFLT          reduce using rule 55 (estatuto -> ciclo_while .)
    CSTCHAR         reduce using rule 55 (estatuto -> ciclo_while .)
    CSTSTRING       reduce using rule 55 (estatuto -> ciclo_while .)
    TRUE            reduce using rule 55 (estatuto -> ciclo_while .)
    FALSE           reduce using rule 55 (estatuto -> ciclo_while .)
    CCURLY          reduce using rule 55 (estatuto -> ciclo_while .)


state 21

    (56) estatuto -> ciclo_for .

    ID              reduce using rule 56 (estatuto -> ciclo_for .)
    IF              reduce using rule 56 (estatuto -> ciclo_for .)
    PRINT           reduce using rule 56 (estatuto -> ciclo_for .)
    READ            reduce using rule 56 (estatuto -> ciclo_for .)
    WHILE           reduce using rule 56 (estatuto -> ciclo_for .)
    FOR             reduce using rule 56 (estatuto -> ciclo_for .)
    OCURLY          reduce using rule 56 (estatuto -> ciclo_for .)
    FUNCTION        reduce using rule 56 (estatuto -> ciclo_for .)
    CLASS           reduce using rule 56 (estatuto -> ciclo_for .)
    VAR             reduce using rule 56 (estatuto -> ciclo_for .)
    OPAREN          reduce using rule 56 (estatuto -> ciclo_for .)
    CSTINT          reduce using rule 56 (estatuto -> ciclo_for .)
    CSTFLT          reduce using rule 56 (estatuto -> ciclo_for .)
    CSTCHAR         reduce using rule 56 (estatuto -> ciclo_for .)
    CSTSTRING       reduce using rule 56 (estatuto -> ciclo_for .)
    TRUE            reduce using rule 56 (estatuto -> ciclo_for .)
    FALSE           reduce using rule 56 (estatuto -> ciclo_for .)
    CCURLY          reduce using rule 56 (estatuto -> ciclo_for .)


state 22

    (57) estatuto -> ternaria .

    ID              reduce using rule 57 (estatuto -> ternaria .)
    IF              reduce using rule 57 (estatuto -> ternaria .)
    PRINT           reduce using rule 57 (estatuto -> ternaria .)
    READ            reduce using rule 57 (estatuto -> ternaria .)
    WHILE           reduce using rule 57 (estatuto -> ternaria .)
    FOR             reduce using rule 57 (estatuto -> ternaria .)
    OCURLY          reduce using rule 57 (estatuto -> ternaria .)
    FUNCTION        reduce using rule 57 (estatuto -> ternaria .)
    CLASS           reduce using rule 57 (estatuto -> ternaria .)
    VAR             reduce using rule 57 (estatuto -> ternaria .)
    OPAREN          reduce using rule 57 (estatuto -> ternaria .)
    CSTINT          reduce using rule 57 (estatuto -> ternaria .)
    CSTFLT          reduce using rule 57 (estatuto -> ternaria .)
    CSTCHAR         reduce using rule 57 (estatuto -> ternaria .)
    CSTSTRING       reduce using rule 57 (estatuto -> ternaria .)
    TRUE            reduce using rule 57 (estatuto -> ternaria .)
    FALSE           reduce using rule 57 (estatuto -> ternaria .)
    CCURLY          reduce using rule 57 (estatuto -> ternaria .)


state 23

    (58) estatuto -> bloque .
